mineo-s3-ftp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mineo
  namespace: tsebra-home
  labels:
    app: mineo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mineo
  template:
    metadata:
      labels:
        app: mineo
    spec:
      # securityContext:
      #   capabilities:
      #     add:
      #       - NET_ADMIN
      containers:
        - name: mineo
          image: minio/minio
          ports:
            - name: http-api
              containerPort: 9000
            - name: http-webui
              containerPort: 9002
            - name: ftp
              containerPort: 8021
          volumeMounts:
            - name: mineo-data
              mountPath: /data
          command: ["/bin/sh", "-c", "minio server /data --console-address \":9002\" --ftp \"address=:8021\" --ftp \"passive-port-range=30000-40000\""]
      volumes:
        - name: mineo-data
          persistentVolumeClaim:
            claimName: mineo-data
