mineo-s3-ftp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mineo-webui
  namespace: tsebra-home
  labels:
    run: mineo
spec:
  type: ClusterIP
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
      name: http-webui
  selector:
    run: mineo
---
apiVersion: v1
kind: Service
metadata:
  name: mineo-api
  namespace: tsebra-home
  labels:
    run: mineo
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http-api
  selector:
    run: mineo
---
apiVersion: v1
kind: Service
metadata:
  name: mineo-ftp
  namespace: tsebra-home
  labels:
    run: mineo
spec:
  type: LoadBalancer
  # loadBalancerClass: tailscale #can't use ingress for ftp
  ports:
    - port: 8021
      targetPort: 8021
      protocol: TCP
      name: ftp
  selector:
    run: mineo
