mineo-s3-ftp/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mineo-api
  namespace: tsebra-home
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`mineo-api.tsebra-home.de`)
      services:
        - name: mineo-api
          port: 9000
    - kind: Rule
      match: Host(`mineo-webui.tsebra-home.de`)
      services:
        - name: mineo-webui
          port: 9002
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mineo-ftp
  namespace: tsebra-home
spec:
  entryPoints:
    - ftp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mineo-ftp
          port: 8021
